--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "profile_management.h": "c",
         "max6675.h": "c"
-    }
+    },
+    "cmake.sourceDirectory": "C:/Users/Camille/Documents/PlatformIO/Projects/13_ReflowOven/ReflowOven/lib/Lvgl"
 }
